[FLINK-38936][connectors/filesystem] Update Windows-specific CI tests to actually skip RAT verification

--- a/.github/workflows/windows-file-name-verification.yml
+++ b/.github/workflows/windows-file-name-verification.yml
@@ -46,7 +46,7 @@ jobs:
           mvn -pl flink-connectors/flink-connector-files -am \
               -DskipTests \
               -DskipITs \
-              -Dskip.rat=true \
+              -Drat.skip=true \
               -Dcheckstyle.skip=true \
               -Dspotless.check.skip=true \
               package
@@ -57,7 +57,7 @@ jobs:
         run: |
           mvn -pl flink-connectors/flink-connector-files \
               -DskipITs \
-              -Dskip.rat=true \
+              -Drat.skip=true \
               -Dcheckstyle.skip=true \
               -Dspotless.check.skip=true \
               -Dtest=FileSystemTableSourceTest#testForOsIndependentFileNameFix \
