--- a/.github/workflows/windows-file-name-verification.yml
+++ b/.github/workflows/windows-file-name-verification.yml
@@ -21,15 +21,15 @@ jobs:
           path: f
           fetch-depth: 1
           sparse-checkout: |
-            .mvn
+            .mvn/**
             mvnw
             pom.xml
-            tools
-            flink-annotations
-            flink-core
-            flink-test-utils-parent
-            flink-connectors/flink-connector-files
-            flink-table
+            tools/**
+            flink-annotations/**
+            flink-core/**
+            flink-test-utils-parent/**
+            flink-connectors/flink-connector-files/**
+            flink-table/**
           sparse-checkout-cone-mode: false
 
       - name: Set up Java
